src/components/FeaturedBooks/featuredBooks.css
* {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}

.container {
    display: flex;
    justify-content: space-between;
    width: 100%;
    height: 330px;
    background-color: rgb(129, 129, 129);
    background-image: url("../../../public/FeaturedBooksBG.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: bottom;
    border-radius: 15px;
    padding: 1vw 1vw 1vw 1vw;
}

.itemWrapper {
    display: flex;
    position: relative;
}

.featuredBooksTitle {
    display: flex;
    flex-direction: column;
    justify-content: left;
    width: 250px;
    padding: 2vw 1vw 1vw 1vw;
    margin-left: 2vw;
    margin-right: 1vw;
    font-size: 1.8em;
    font-weight: normal;
    border-radius: 12px;
    color: white;
    /* background-color: lightblue; */
    backdrop-filter: blur(5px);
    box-shadow: 5px 5px 10px 3px rgba(0, 0, 0, 0.050);
}

.titleText {
    display: flex;
    height: 70%;
}

.offPersentage {
    display: flex;
    align-content: center;
    border: 1px solid white;
    width: fit-content;
    font-size: 24px;
    padding: 10px;
    margin-top: 10px;
    border-radius: 20px 5px 20px 20px;
}

